force-app/main/default/objects/Vessel__c/fields/ChaterPeriod__c.field-meta.xml
<CustomField>
    <fullName>ChaterPeriod__c</fullName>
    <label>Chater Period</label>
    <length>255</length>
    <type>Text</type>
</CustomField>