force-app/main/default/objects/Vessel__c/fields/Client__c.field-meta.xml
<CustomField>
    <fullName>Client__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Client</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Vessels (Client)</relationshipLabel>
    <relationshipName>Vessels1</relationshipName>
    <type>Lookup</type>
</CustomField>