force-app/main/default/objects/Vessel__c/fields/ContractResponsible__c.field-meta.xml
<CustomField>
    <fullName>ContractResponsible__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contract Administrator</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Vessels</relationshipName>
    <type>Lookup</type>
</CustomField>