force-app/main/default/objects/Vessel__c/fields/CreatedByMe__c.field-meta.xml
<CustomField>
    <fullName>CreatedByMe__c</fullName>
    <formula>$User.Id = CreatedBy.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Created by me</label>
    <type>Checkbox</type>
</CustomField>