force-app/main/default/objects/Vessel__c/fields/FieldLocation__c.field-meta.xml
<CustomField>
    <fullName>FieldLocation__c</fullName>
    <label>Field Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>