force-app/main/default/objects/Vessel__c/fields/FirstOil__c.field-meta.xml
<CustomField>
    <fullName>FirstOil__c</fullName>
    <label>First Oil</label>
    <type>Date</type>
</CustomField>