force-app/main/default/objects/Vessel__c/fields/GasProduction__c.field-meta.xml
<CustomField>
    <fullName>GasProduction__c</fullName>
    <inlineHelpText>mmscfd</inlineHelpText>
    <label>Gas Production</label>
    <length>255</length>
    <type>Text</type>
</CustomField>