force-app/main/default/objects/Vessel__c/fields/Management__c.field-meta.xml
<CustomField>
    <fullName>Management__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Client Management</label>
    <referenceTo>Client__c</referenceTo>
    <relationshipLabel>Vessels</relationshipLabel>
    <relationshipName>Vessels</relationshipName>
    <type>Lookup</type>
</CustomField>