force-app/main/default/objects/Vessel__c/fields/ManagementName__c.field-meta.xml
<CustomField>
    <fullName>ManagementName__c</fullName>
    <formula>Management__r.Name</formula>
    <label>Management Name</label>
    <type>Text</type>
</CustomField>