force-app/main/default/objects/Vessel__c/fields/MooringType__c.field-meta.xml
<CustomField>
    <fullName>MooringType__c</fullName>
    <label>Mooring Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>