force-app/main/default/objects/Vessel__c/fields/NumberLastSentLetter__c.field-meta.xml
<CustomField>
    <fullName>NumberLastSentLetter__c</fullName>
    <label>Number of last sent Letter</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>