force-app/main/default/objects/Vessel__c/fields/OilProduction__c.field-meta.xml
<CustomField>
    <fullName>OilProduction__c</fullName>
    <inlineHelpText>bopd</inlineHelpText>
    <label>Oil Production</label>
    <length>255</length>
    <type>Text</type>
</CustomField>