force-app/main/default/objects/Vessel__c/fields/OperationManager__c.field-meta.xml
<CustomField>
    <fullName>OperationManager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Operations Manager</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Vessels (Operation Manager)</relationshipLabel>
    <relationshipName>Vessels1</relationshipName>
    <type>Lookup</type>
</CustomField>