force-app/main/default/objects/Vessel__c/fields/ResponsibleLoggedIn__c.field-meta.xml
<CustomField>
    <fullName>ResponsibleLoggedIn__c</fullName>
    <formula>IF(
or (ContractResponsible__c = $User.Id ,  $User.CommunityNickname  = &quot;User15831739644296457125&quot; , $User.FirstName = &quot;Armando&quot;), 1 , 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Responsible Logged In</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>