force-app/main/default/objects/Vessel__c/fields/ResponsibleManagement__c.field-meta.xml
<CustomField>
    <fullName>ResponsibleManagement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Manager (Client)</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Vessels (Manager (Client))</relationshipLabel>
    <relationshipName>Vessels</relationshipName>
    <type>Lookup</type>
</CustomField>