force-app/main/default/objects/Vessel__c/fields/ScopeOfWork__c.field-meta.xml
<CustomField>
    <fullName>ScopeOfWork__c</fullName>
    <label>Scope of Work</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Engineering</fullName>
            </value>
            <value>
                <fullName>Procurement</fullName>
            </value>
            <value>
                <fullName>Construction</fullName>
            </value>
            <value>
                <fullName>Mobilization</fullName>
            </value>
            <value>
                <fullName>Installation</fullName>
            </value>
            <value>
                <fullName>OperationMaintenance</fullName>
                <label>Operation &amp; Maintenance</label>
            </value>
            <value>
                <fullName>Operation</fullName>
                <isActive>false</isActive>
                <label>Operation</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>