force-app/main/default/objects/Vessel__c/fields/SPC__c.field-meta.xml
<CustomField>
    <fullName>SPC__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SPC</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Vessels</relationshipLabel>
    <relationshipName>Vessels</relationshipName>
    <type>Lookup</type>
</CustomField>