force-app/main/default/objects/Vessel__c/fields/StorageCapacity__c.field-meta.xml
<CustomField>
    <fullName>StorageCapacity__c</fullName>
    <inlineHelpText>bbls</inlineHelpText>
    <label>Storage Capacity</label>
    <length>255</length>
    <type>Text</type>
</CustomField>