force-app/main/default/objects/Vessel__c/fields/VesselCode__c.field-meta.xml
<CustomField>
    <fullName>VesselCode__c</fullName>
    <inlineHelpText>Example: MHXXX-MBS</inlineHelpText>
    <label>Vessel Code</label>
    <length>15</length>
    <type>Text</type>
</CustomField>