force-app/main/default/objects/Vessel__c/fields/WaterDepth__c.field-meta.xml
<CustomField>
    <fullName>WaterDepth__c</fullName>
    <inlineHelpText>meters</inlineHelpText>
    <label>Water  Depth</label>
    <length>255</length>
    <type>Text</type>
</CustomField>