force-app/main/default/objects/Vessel__c/fields/WaterInjection__c.field-meta.xml
<CustomField>
    <fullName>WaterInjection__c</fullName>
    <label>Water Injection</label>
    <length>255</length>
    <type>Text</type>
</CustomField>