force-app/main/default/objects/Vessel__c/fields/WOAttention__c.field-meta.xml
<CustomField>
    <fullName>WOAttention__c</fullName>
    <label>WO Attention</label>
    <length>31072</length>
    <type>Html</type>
</CustomField>