force-app/main/default/objects/Vessel__c/fields/WOAttentionMINC__c.field-meta.xml
<CustomField>
    <fullName>WOAttentionMINC__c</fullName>
    <label>WO Attention MINC</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>