force-app/main/default/objects/Vessel__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>ShortName__c</columns>
    <columns>SPC__c</columns>
    <columns>Country__c</columns>
    <columns>FieldLocation__c</columns>
    <columns>GasProduction__c</columns>
    <columns>OilProduction__c</columns>
    <columns>Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>